[package]
name = "prokio"
version = "0.1.0"
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["yew", "futures", "async", "io"]
categories = ["asynchronous"]
description = "An asynchronous runtime compatible with WebAssembly and non-WebAssembly targets."
repository = "https://github.com/futursolo/prokio"
rust-version = "1.60.0"

[dependencies]
futures = { version = "0.3", default-features = false, features = [
  "std",
  "async-await",
] }
pin-project = "1.0.11"
pinned = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4" }
gloo = { version = "0.8" }

once_cell = { version = "1", optional = true }
tokio_wasi = { version = "1", features = ["rt", "time"], optional = true }
tokio-stream_wasi = { version = "0.1", features = ["time"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
num_cpus = "1.13"
once_cell = "1"
tokio = { version = "1", features = ["rt", "time"] }
tokio-stream = { version = "0.1", features = ["time"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
wasi = ["dep:once_cell", "dep:tokio_wasi", "dep:tokio-stream_wasi"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]
